--- a/tokickortostart/.classpath
+++ b/tokickortostart/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/dufau/Documents/poi-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dufau/Documents/poi-ooxml-4.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
